# django-oapif

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  baseline.json  conformance-baseline.json  docker-compose.arm64.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.tests.yml  docker-compose.yml  high_perf_curl.txt  index.html  items  normal.json  normal_curl.txt  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: benchmark.yml  check-pre-commit.yml  conformance.yml  deploy.yml  docs.yml  flatgeobuf.yml  publish.yml  pypi.yml  release.yml  test-conformance.yml  test-migrations.yml  test.yml  tests.yml  wheel.yml
.github/workflows/_scripts/: assert_version_from_git.py  set_version_from_git.py
api/: index.html
conformance-tests/: Dockerfile  ogcf.py  test-run-props.xml
demo/: index.html
django-ogcapif/django_ogcapif/: __version__.py  pagination.py  parsers.py  routers.py  views.py
django_oapif/: README.md  __init__.py  api.py  auth.py  collections.py  conformance.py  crs.py  crs_utils.py  decorators.py  filters.py  functions.py  geojson.py  handler.py  mixins.py  ninja_ogc.py  oapif.py  ogc.py  pagination.py  permissions.py  root.py  schema.py  utils.py
docker/caddy/: Caddyfile  Dockerfile
docker/conformance/: Dockerfile
docker/django/: Dockerfile  entrypoint.sh
docker/integration-tests/: Dockerfile  test_auth_from_qgis.py  test_integration_qgis.py  test_with_unittest.py
docs/: mkdocs.yml  requirements-dev.txt  requirements.txt  zensical.toml
docs/content/: api.md  demo.md  foreign_keys.md  index.md  permissions.md  quick-start.md  special_fields.md  tests.md
docs/content/style/: style.css
flatgeobuf-pyrust/: Cargo.toml  pyproject.toml  requirements-dev.txt
flatgeobuf-pyrust/src/: lib.rs
flatgeobuf-pyrust/tests/: decoded.json  tests.py
permissions/: index.html
quick-start/: index.html
scripts/: download-fixtures.sh  fixture-generator.py  fixture-generatore.py  parse_report.py  populate.sh  prepare_package.sh  prepare_then_build.sh  reset-migrations.sh  restart.sh  run_tests_locally.sh  time-request.py
search/: search_index.json
signalo/: manage.py
signalo/django_oapif/: README.md  mixins.py  pagination.py  views.py
signalo/django_wfs3/: README.md  mixins.py  pagination.py
signalo/signalo/: asgi.py  settings.py  urls.py  wsgi.py
signalo/signalo/.tx/: config
signalo/signalo_app/: admin.py  apps.py  models.py  urls.py  views.py
signalo/signalo_app/fixtures/: pole.json  sign.json
signalo/signalo_app/management/commands/: gen_data.py
signalo/signalo_app/migrations/: 0001_initial.py  0002_alter_sign_computed_geom.py  0002_rename_magnitude_sign_order.py  0003_rename_computed_geom_sign_geom.py
src/: decorators.py  mixins.py
src/django_oapif/: README.md  __init__.py  crs_ultis.py  crs_utils.py  db.py  decorators.py  filters.py  functions.py  metadata.py  mixins.py  pagination.py  parsers.py  renderers.py  routers.py  urls.py  views.py
src/signalo/: asgi.py  settings.py  urls.py  wsgi.py
src/signalo/core/: apps.py  groups.py  models.py  permissions.py  tests.py  urls.py  views.py
src/signalo/core/fixtures/: pole.json
src/signalo/core/management/commands/: add_users.py  gen_data.py  init.py  populate_core.py  populate_data.py  populate_signs_poles.py  populate_users.py
src/signalo/core/migrations/: 0001_initial.py  0002_alter_pole_geom_alter_sign_geom.py  0002_alter_sign_order.py  0002_remove_sign_geom_azimuth_geom.py  0002_rename_geom_after_sign_offset_sign_offset.py  0003_alter_pole_geom_alter_sign_geom.py  0003_alter_sign_azimuth.py  0003_rename_offset_sign_offset_px.py  0003_sign_geom.py  0004_remove_sign_azimuth_azimuth_pole.py  0004_sign_sign_type.py
src/signalo/core/tests/: test_model_permissions.py
src/signalo/edge_cases/: admin.py  apps.py  models.py  pagination.py  tests.py  urls.py  views.py
src/signalo/edge_cases/migrations/: 0001_initial.py  0002_djangomodelpermissionsmodel.py  0002_highlypaginated.py  0002_testpermissionallowany_and_more.py  0003_differentsrid.py  0004_allowanymodel_isadminusermodel.py  0004_emptytablegeom_simplegeom_alter_differentsrid_geom_and_more.py
src/signalo/roads/: admin.py  apps.py  models.py  tests.py
src/signalo/roads/migrations/: 0001_initial.py  0002_alter_road_geom.py
src/signalo/value_lists/: admin.py  apps.py  models.py  tests.py
src/signalo/value_lists/data/: official-signs.json
src/signalo/value_lists/migrations/: 0001_initial.py  0002_alter_officialsigntype_img_de_and_more.py  0002_officialsigntype_geom.py  0002_remove_officialsigntype_img_de_and_more.py  0003_alter_officialsigntype_geom.py  0003_alter_officialsigntype_img_de_and_more.py  0003_remove_officialsigntype_img_officialsigntype_img_de_and_more.py  0004_alter_officialsigntype_img_de_and_more.py
src/tests/: admin.py  asgi.py  models.py  settings.py  test_core.py  test_django_oapif.py  test_edge_cases.py  test_roads.py  test_value_lists.py  tests.py  wsgi.py
src/tests/management/commands/: populate.py  populate_data.py  populate_users.py
src/tests/migrations/: 0001_initial.py
tests/: docker-compose.arm64.yml  docker-compose.dev.yml  docker-compose.yml  index.html  manage.py
tests/benchmark/: plot.py  time.sh
tests/conformance/: conformance-baseline.json  format_conformance_comment.py  parse_report.py  run.sh  test-run-props.xml
tests/django_oapif_tests/: settings.py
tests/django_oapif_tests/tests/: apps.py  asgi.py  models.py  oapif.py  ogc.py  settings.py  tests.py  urls.py  wsgi.py
tests/django_oapif_tests/tests/migrations/: 0001_initial.py  0002_alter_point_2056_10fields_local_geom_geom.py  0003_non_null_field_with_default.py
tests/docker/caddy/: Caddyfile  Dockerfile
tests/docker/conformance/: Dockerfile
tests/docker/django/: Dockerfile
tests/integration/: test_integration_qgis.py
unit_tests_outputs/: PoleSerializer.prof  rendering_performance.txt
(+8 files in other folders)
