[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]==7.*"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ogcapif"
authors = [
    {name = "OPENGIS.ch", email = "info@opengis.ch"},
]
description = "Easily expose your Django models through an OGCAPI-Features endpoint"
keywords =  ["django", "ogc", "api", "wfs3", "features", "rest", "gis", "ogcapif"]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
license = { text = "MIT License" }
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/opengisch/django-ogcapif"
repository = "https://github.com/opengisch/django-ogcapif"
tracker = "https://github.com/opengisch/django-ogcapif/issues"

[tool.setuptools_scm]
write_to = "django_ogcapif/__version__.py"
version_scheme = "post-release"
fallback_version = "0.1.6"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}
