[build-system]
requires = ["setuptools>=45", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "django-oapif"
authors = [
    {name = "OPENGIS.ch", email = "info@opengis.ch"},
]
description = "Easily expose your Django models through an OGCAPI-Features endpoint"
keywords =  ["django", "ogc", "api", "wfs3", "features", "rest", "gis", "ogcapif", "oapif"]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
license = { text = "MIT License" }
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[project.urls]
homepage = "https://github.com/opengisch/django-oapif"
repository = "https://github.com/opengisch/django-oapif"
tracker = "https://github.com/opengisch/django-oapif/issues"

[tool.setuptools]
packages = ["django_oapif"]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "0.0.0.dev"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.pyright]
typeCheckingMode = "basic"
reportPrivateImportUsage = "none"

[tool.ruff]
target-version="py312"
line-length = 120
lint.pydocstyle.convention = "google"
lint.fixable = ["ALL"]
extend-exclude = [
    "tests/django_oapif_tests/tests/migrations/*",
]

[tool.ruff.format]
preview = true
